# iotc-amazon-freertos-sdk

./: .gitmodules  CMakeLists.txt  README.md
iotc-amazon-freertos-sdk/: CMakeLists.txt
iotc-amazon-freertos-sdk/include/: iotconnect.h  iotconnect_certs.h  iotconnect_sync.h
iotc-amazon-freertos-sdk/iotconnect-afr-layer/include/: iotc_device_client.h  iotc_http_request.h
iotc-amazon-freertos-sdk/iotconnect-afr-layer/src/: iotc_device_client.c  iotc_http_client.c
iotc-amazon-freertos-sdk/src/: iotconnect.c  iotconnect_sync.c
iotconnect-demo/: CMakeLists.txt
iotconnect-demo/config/: app_config.h
iotconnect-demo/src/: iotconnect_app.c  iotconnect_app.h
